--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,11 @@
   width: 50%;
 }
 
+.logbox{
+  height: 200px;
+  width: 500px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
